# python-devicebase

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  async_stream.py  context_manager.py  device_control.py  error_handling.py  screenshot_hierarchy.py  websocket_minicap.py  websocket_minitouch.py
src/devicebase/: __init__.py  client.py  http_client.py  models.py  websocket_client.py
tests/: test_client.py  test_http_client.py  test_models.py  test_websocket_client.py
