[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "devicebase"
version = "2026.4.21"
description = "Devicebase Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Richie" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.0",
    "ruff>=0.3.0",
    "respx>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/uusense/python-devicebase"
Repository = "https://github.com/uusense/python-devicebase"

[tool.hatch.build.targets.wheel]
packages = ["src/devicebase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
